[gd_scene load_steps=21 format=3 uid="uid://ctr4rjkisijxn"]

[ext_resource type="Script" path="res://Common/Main Menu/main_menu.gd" id="1_8nbnl"]
[ext_resource type="Texture2D" uid="uid://ue5tpwubejom" path="res://Common/Main Menu/Visual Assets/Main Menu/close.png" id="2_7hydv"]
[ext_resource type="Texture2D" uid="uid://bdhp2wmrn1g0o" path="res://Common/Main Menu/Visual Assets/Main Menu/bg1.png" id="2_e7vca"]
[ext_resource type="Texture2D" uid="uid://bx4vxdxh2st5b" path="res://Common/Main Menu/Visual Assets/Main Menu/play.png" id="2_tksvg"]
[ext_resource type="Texture2D" uid="uid://igcvir53ybx1" path="res://Common/Main Menu/Visual Assets/Main Menu/play hover 1.png" id="3_8h7gj"]
[ext_resource type="Texture2D" uid="uid://c37n76aivhnsb" path="res://Common/Main Menu/Visual Assets/Main Menu/bg2.png" id="3_f10r4"]
[ext_resource type="Texture2D" uid="uid://tyto577nmqp2" path="res://Common/Main Menu/Visual Assets/Main Menu/close hover 1.png" id="3_odpnq"]
[ext_resource type="Texture2D" uid="uid://cg0e0minlaict" path="res://Common/Main Menu/Visual Assets/Main Menu/play hover 2.png" id="4_1mhhv"]
[ext_resource type="Texture2D" uid="uid://cgdk03wgu8a3k" path="res://Common/Main Menu/Visual Assets/Main Menu/close hover 2.png" id="4_7qfgt"]
[ext_resource type="Texture2D" uid="uid://dfrvbty1p635w" path="res://Common/Main Menu/Visual Assets/Main Menu/bg3.png" id="4_p8w2d"]
[ext_resource type="Texture2D" uid="uid://cw7jljudtbatn" path="res://Common/Main Menu/Visual Assets/Main Menu/play hover 3.png" id="5_6jbtn"]
[ext_resource type="Texture2D" uid="uid://c6x3pwcxcgs6w" path="res://Common/Main Menu/Visual Assets/Main Menu/close hover 3.png" id="5_fyd14"]
[ext_resource type="Texture2D" uid="uid://8asbrt0pnghj" path="res://Common/Main Menu/Visual Assets/Main Menu/settings.png" id="7_ownn3"]
[ext_resource type="Texture2D" uid="uid://dbtlnv3j5s614" path="res://Common/Main Menu/Visual Assets/Main Menu/settings hover 1.png" id="8_tcddx"]
[ext_resource type="Texture2D" uid="uid://hu2fs4ye60o1" path="res://Common/Main Menu/Visual Assets/Main Menu/settings hover 2.png" id="9_wl3ui"]
[ext_resource type="Texture2D" uid="uid://b3pnxnu8wqm2g" path="res://Common/Main Menu/Visual Assets/Main Menu/settings hover 3.png" id="10_5h65b"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_rxcfx"]
frames = 3
frame_0/texture = ExtResource("2_e7vca")
frame_0/duration = 0.3
frame_1/texture = ExtResource("3_f10r4")
frame_1/duration = 0.3
frame_2/texture = ExtResource("4_p8w2d")
frame_2/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_qs6x8"]
frames = 3
frame_0/texture = ExtResource("3_odpnq")
frame_0/duration = 0.3
frame_1/texture = ExtResource("4_7qfgt")
frame_1/duration = 0.3
frame_2/texture = ExtResource("5_fyd14")
frame_2/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_78mkd"]
frames = 3
frame_0/texture = ExtResource("8_tcddx")
frame_0/duration = 0.3
frame_1/texture = ExtResource("9_wl3ui")
frame_1/duration = 0.3
frame_2/texture = ExtResource("10_5h65b")
frame_2/duration = 0.3

[sub_resource type="AnimatedTexture" id="AnimatedTexture_w7ubi"]
frames = 3
frame_0/texture = ExtResource("3_8h7gj")
frame_0/duration = 0.3
frame_1/texture = ExtResource("4_1mhhv")
frame_1/duration = 0.3
frame_2/texture = ExtResource("5_6jbtn")
frame_2/duration = 0.3

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_8nbnl")

[node name="BG" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AnimatedTexture_rxcfx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.5
offset_top = -207.0
offset_right = 325.5
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_7hydv")
texture_hover = SubResource("AnimatedTexture_qs6x8")

[node name="SettingButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture_normal = ExtResource("7_ownn3")
texture_hover = SubResource("AnimatedTexture_78mkd")

[node name="PlayButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_tksvg")
texture_hover = SubResource("AnimatedTexture_w7ubi")

[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
